[tool.poetry]
name = "urdfenvs"
version = "0.2.2"
description = "Simple simulation environment for robots, based on the urdf files."
authors = ["Max Spahn <m.spahn@tudelft.nl>"]

[tool.poetry.dependencies]
python = "^3.6, <3.11"
pybullet = "^3.2.1"
gym = "^0.21.0"
numpy = "^1.19.0"
pytest = "^6.2.5"
urdfpy = "^0.0.22"
Sphinx = { version = "4.2.0", optional = true }
sphinx-rtd-theme = { version = "1.0.0", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }
motion-planning-scenes = {version = "^0.1.19", optional = true}
pynput = {version = "^1.7.6", optional = true}
multiprocess = {version = "^0.70.12", optional = true}

[tool.poetry.extras]
scenes = ["motion-planning-scenes"]
keyboard = ["pynput", "multiprocess"]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]




[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
