[tool.poetry]
name = "urdfenvs"
version = "0.4.0"
description = "Simple simulation environment for robots, based on the urdf files."
authors = ["Max Spahn <m.spahn@tudelft.nl>"]
maintainers = [
  "Max Spahn <m.spahn@tudelft.nl>",
  "Chadi Salmi <c.salmi@tudelft.nl"
]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://maxspahn.github.io/gym_envs_urdf/"
documentation = "https://maxspahn.github.io/gym_envs_urdf/"
repository = "https://github.com/maxspahn/gym_envs_urdf"
keywords = ["robotics", "motion-planning", "simulation"]

[tool.poetry.dependencies]
python = "^3.6.5, <3.10"
pybullet = "^3.2.1"
gym = "^0.21.0"
numpy = "^1.19.0"
urdfpy = "^0.0.22"
pynput = {version = "^1.7.6", optional = true}
multiprocess = {version = "^0.70.12", optional = true}
motion-planning-scenes = {version = "^0.3.4", optional = true}

[tool.poetry.extras]
scenes = ["motion-planning-scenes"]
keyboard = ["pynput", "multiprocess"]




[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest = "^6.2.5"
Sphinx = "4.2.0"
sphinx-rtd-theme = "1.0.0"
sphinxcontrib-napoleon = "0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
